package Week6_PL_Comparable;
/**
 * Esta classe permite a construção de uma hierarquia de classes para representarem diferentes tipos de trabalhadores. Especifica membros comuns a todas as classes da hierarquia.
 */
public abstract class Trabalhador implements Comparable {

    /**
     * O nome do trabalhador.
     */
    private String nome;

    /**
     * O nome por omissão do trabalhador.
     */
    private static final String NOME_POR_OMISSAO = "sem nome";

    /**
     * Inicializa o nome do trabalhador com o nome recebido.
     *
     * @param nome o nome do trabalhador
     */
    public Trabalhador(String nome) {
        this.nome = nome;
    }

    /**
     * Inicializa o nome do trabalhador com o nome por omissão.
     */
    public Trabalhador() {
        nome = Trabalhador.NOME_POR_OMISSAO;
    }

    /**
     * Devolve o nome do trabalhador.
     *
     * @return nome do trabalhador
     */
    public String getNome() {
        return nome;
    }

    /**
     * Modifica o nome do trabalhador.
     *
     * @param nome o novo nome do trabalhador
     */
    public void setNome(String nome) {
        this.nome = nome;
    }

    /**
     * Devolve o nome do trabalhador.
     *
     * @return nome do trabalhador
     */
    @Override
    public String toString() {
        return nome;
    }

    /**
     * Permite o cálculo do vencimento do trabalhador através do polimorfismo.
     *
     * @return vencimento do trabalhador
     */
    public abstract float calcularVencimento();

    /**
     * Compara o vencimento de dois trabalhadores
     * @param o objeto a ser comparado.
     * @return diferença entre os vencimentos dos dois trabalhadores comparados
     */

    @Override
    public int compareTo(Object o) {
        Trabalhador t = (Trabalhador) o;
        return (int) (this.calcularVencimento() - t.calcularVencimento());
    }
}
