@startuml
'https://plantuml.com/class-diagram

Title Class Diagram Vencimentos

abstract Trabalhador{
- String: nome
+ getNome()
+ setNome()
+ calcularVencimento()
}

class TrabalhadorPeça{
- int: numeroPecasTipo1
- int: numeroPecasTipo2
+ calcularVnecimento()
}

class TrabalhadorComissao{
- float: salarioBase
- float: vendas
- float: comissao
+ calcularVencimento()
}

class TrabalhadorHora{
- int: numeroHoras
- float pagamentoHora
+ calcularVencimento()
}

TrabalhadorComissao --|> Trabalhador
TrabalhadorHora --|> Trabalhador
TrabalhadorPeça --|> Trabalhador
@enduml